# wavefunction

./: .gitignore  CHANGELOG.md  Makefile  README.md  citations.cff  pyproject.toml  requirements.txt
.github/workflows/: test.yml  upload.yml
examples/: demos.py
tests/: test_wavefunction.py
wavefunction/: __init__.py  wavefunction.py
