[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["wavefunction"]

[project]
name = "wavefunction"
version = "0.0.3"
description = "Quantum Wavefunction with Spectral Complexity measure"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"

keywords = [
  "quantum",
  "quantum-field-theory",
  "information-theory",
  "wavefunction",
  "spinor",
  "emergent-physics",
  "minimal-spectral-length",
  "computational-physics"
]


authors = [
  {name = "Juha Meskanen", email = "juha@meskanen.com" }
]
maintainers = [
  {name = "Juha Meskanen", email = "juha@meskanen.com" }
]

classifiers = [
  # Development maturity
  "Development Status :: 4 - Beta",

  # Intended audience
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",

  # Topic classification
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Information Analysis",

  # Programming language
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",

  # Typing / implementation
  "Typing :: Typed",
  "Operating System :: OS Independent",
]


dependencies = [
 "numpy>=1.25,<1.27",
 "scipy>=1.10",
 "numba>=0.59",
 "matplotlib",
]


[project.urls]
"Homepage" = "https://github.com/juhakm/wavefunction"
"Bug Reports" = "https://github.com/juhakm/wavefunction"
"Say Thanks!" = "https://github.com/juhakm/wavefunction"
"Source" = "https://github.com/juhakm/wavefunction"


[tool.mypy]
files = ["wavefunction/*.py"]
ignore_missing_imports = false


[tool.setuptools.package-data]
"wavefunction" = ["py.typed"]

